--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
       <meta charset="utf-8">
       <title>sample</title>
       <link rel="stylesheet" href="stylesheet.css">
-      <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   </head>
   <body>
+      <p><img src="1.png" alt="水晶" title="水晶"></p>
     <h1>Hello, world!</h1>
   </body>
 </html>
