--- a/draw.html
+++ b/draw.html
@@ -13,14 +13,13 @@
           <a href="index.html">UTTT</a></div>
       <div class="header-list">
       <ul>
-          <li><a href="draw.html">イラスト</a></li>
+        <li><a href="draw.html">イラスト</a></li>
           <li><a href="work.html">作品集</a></li>
           <li><a href="link.html">リンク</a></li>
       </ul>
       </div>
     </div>
       <br><br>
-      <p><img src="1.png" alt="水晶" title="水晶"></p>
-      <h1>Hello!!!!!</h1>
+      作成中です
   </body>
 </html>
