--- a/link.html
+++ b/link.html
@@ -20,7 +20,6 @@
       </div>
     </div>
       <br><br>
-      <p><img src="1.png" alt="水晶" title="水晶"></p>
-      <h1>Hello!!!!!</h1>
+      作成中です
   </body>
 </html>
