--- a/link.html
+++ b/link.html
@@ -10,12 +10,12 @@
     <!-- ここからHTMLを書き始めてください -->
     <div class="header">
       <div class="header-logo">
-          <a href="index.html">UTTT</a></div>
+          <a href="index.html"><font color="white">UTTT</font></a></div>
       <div class="header-list">
       <ul>
-          <li><a href="draw.html">イラスト</a></li>
-          <li><a href="work.html">作品集</a></li>
-          <li><a href="link.html">リンク</a></li>
+          <li><a href="draw.html"><font color="white">イラスト</font></a></li>
+          <li><a href="work.html"><font color="white">作品集</font></a></li>
+          <li><a href="link.html"><font color="white">リンク</font></a></li>
       </ul>
       </div>
     </div>
