--- a/afterlife.html
+++ b/afterlife.html
@@ -9,8 +9,28 @@
       <br>
       <div class="aftitle">来世は何になれるかな</div>
       <br><br>
-      さくせいとちゅうです<br><br><br><br>
-      <a href="#" class="square_btn">占う</a>
+      あなたの来世はなんだろね<br><br>
+      <div id="target"></div>
+    <input type="button" 
+           style="width:30%;
+                  padding:10px;
+                  font-size:80px;" 
+           value="占う" 
+           id="bt"　class="btn"/>
+    <script language="javascript" type="text/javascript">
+    var target = document.getElementById( 'target' );
+    var bt = document.getElementById( 'bt' );
+    bt.addEventListener( 'click', function( e ) {
+        var imglist = [
+    "1.jpg",
+    "2.jpg",
+    "3.jpg",
+    ];
+    var selectnum = Math.floor(Math.random() * imglist.length);
+    var element = '<img src="' + imglist[ selectnum ] + '" alt="" />';
+    target.innerHTML = element;
+     }, false );
+    </script><br><br>
       <br>
       <br>
       <a href="work.html">戻る</a>
