--- a/afterlife.html
+++ b/afterlife.html
@@ -22,9 +22,8 @@
     var bt = document.getElementById( 'bt' );
     bt.addEventListener( 'click', function( e ) {
         var imglist = [
-    "1.jpg",
-    "2.jpg",
-    "3.jpg",
+    "images/1.jpg","images/2.jpg","images/3.jpg",
+    "images/4.jpg","images/5.jpg","images/6.jpg",
     ];
     var selectnum = Math.floor(Math.random() * imglist.length);
     var element = '<img src="' + imglist[ selectnum ] + '" alt="" />';
