--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
       <br><br>
-      <p><img src="1.png" alt="水晶" title="水晶"></p>
+      <p><img src="images/1.png" alt="水晶" title="水晶"></p>
       <h1>Hello!!!!!</h1>
   </body>
 </html>
