--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="ja">
   <head>
+    <title>sample app</title>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>sample</title>
-    <link rel="stylesheet" href="stylesheet.css">
-      <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <style>
+    .cover{
+      background:url(images/st.jpg);
+      background-size: cover;
+
+    }
+    </style>
   </head>
   <body>
-    <!-- ここからHTMLを書き始めてください -->
-    <div class="header">
-      <div class="header-logo">
-          <a href="index.html"><font color="white">UTTT</font></a></div>
-      <div class="header-list">
-      <ul>
-          <li><a href="draw.html"><font color="white">イラスト</font></a></li>
-          <li><a href="work.html"><font color="white">作品集</font></a></li>
-          <li><a href="link.html"><font color="white">リンク</font></a></li>
-      </ul>
+    <header>
+      <div class="cover text-center text-white py-5">
+        <h1 class="display-4 mb-4">sample site</h1>
+        <a href="https://twitter.com/uta097" class="btn btn-primary btn-lg">follow now</a>
       </div>
-    </div>
-      <br><br>
-      <p><img src="images/1.png" alt="水晶" title="水晶"></p>
-      <h1>Hello!!!!!</h1>
+    </header>
+    <main>
+      <section class="py-5">
+        <h2 class="text-center mb-5">Introduction</h2>
+        <div class="container">
+          <div>
+            <h3 class="py-5 text-center">illustration</h3>
+            <img src="images/ab.jpg" class="rounded mx-auto d-block" alt="illust">
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+    </footer>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
