--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <h2 class="text-center mb-5">Introduction</h2>
         <div class="container">
           <div>
-            <h3 class="py-5 text-center">illustration</h3>
-            <img src="images/ab.jpg" class="rounded mx-auto d-block" alt="illust">
+            <h3 class="py-5">illustration</h3>
+            <img src="images/ab.jpg" class="w-100" alt="illust">
           </div>
         </div>
       </section>
