--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ja">
   <head>
-    <title>sample app</title>
+    <title>作成途中です</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -31,6 +31,22 @@
             <h3 class="py-3">illustration</h3>
             <img src="images/ab.jpg" class="w-100" alt="illust">
           </div>
+        </div>
+      </section>
+
+      <section class="bg-light text-center py-5">
+        <h2 class="mb-5">like</h2>
+        <div class="container">
+          <table class="table hover">
+            <thead>
+              <tr><th>Plan A</th><th>Plan B</th></tr>
+            </thead>
+            <tbody>
+              <tr><td>1</td><td>4</td></tr>
+              <tr><td>2</td><td>5</td></tr>
+              <tr><td>3</td><td>6</td></tr>
+            </tbody>
+          </table>
         </div>
       </section>
     </main>
