--- a/index.html
+++ b/index.html
@@ -14,13 +14,35 @@
       background-size: cover;
 
     }
+    .aa{
+      font-size: 30px;
+    }
     </style>
   </head>
   <body>
     <header>
       <div class="cover text-center text-white py-5">
         <h1 class="display-4 mb-4">sample site</h1>
-        <a href="https://twitter.com/uta097" class="btn btn-primary btn-lg">follow now</a>
+        <a href="" class="btn btn-primary btn-lg">follow now</a>
+      </div>
+      <div class="container py-5 aa">
+        <nav>
+          <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="#">home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">cart</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">???</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">!!!</a>
+          </li>
+        </ul>
+          </div>
+        </nav>
       </div>
     </header>
     <main>
@@ -28,8 +50,8 @@
         <h2 class="text-center mb-5">Introduction</h2>
         <div class="container">
           <div>
-            <h3 class="py-3">illustration</h3>
-            <img src="images/ab.jpg" class="w-100" alt="illust">
+            <h3 class="py-3">a</h3>
+
           </div>
         </div>
       </section>
